# Ruzzia

./: .env.sample  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  pytonconnect-manifest.json  test.py
api/: users.py
app/: config.py  main.py
app/api/: admin.py  events.py  users.py
app/common/: admin.py  discord_api.py  error.py  jwt.py  litebalancer.py  nft.py  shutdown.py  startup.py  time.py  ton_api.py  transaction.py
app/database/: event.py  mongo.py  transaction_history.py  user.py
app/models/: mongo_model.py
app/models/admin/: connect.py  money_transfer.py
app/models/event/: event_model.py
app/models/transaction/: transaction_history_model.py
app/models/user/: conclusion.py  connect_minecraft.py  connect_wallet.py  get_user.py  nft_presence.py  registration_queue.py  token.py  user_model.py
app/redis/: redis.py  user.py
database/: mongo.py  user.py
models/: mongo_model.py
models/user/: get_user.py  user.py
nginx/: nginx.conf
