[tool.poetry]
name = "ruzzia"
version = "0.1.0"
description = ""
authors = ["neJok"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.1"
python-dotenv = "^1.0.1"
motor = "^3.5.1"
requests = "^2.32.3"
tonsdk = "^1.0.15"
pytonconnect = "^0.3.1"
uvicorn = "^0.30.3"
pynacl = "^1.5.0"
pyjwt = "^2.8.0"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
